[build-system]
requires = [
    "setuptools",
    "wheel",
]

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
target-version = "py39" # https://endoflife.date/python
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
    ".svn",
    "_build",
    "*.ipynb",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    "E203", # whitespace before ':'. Opposite convention enforced by black
    "E731", # Do not assign a lambda expression, use a def
    "W605", # invalid escape sequence '\_'. Needed for docs
]
